Make it very easy to create a header line from plugin most plugin elements. Makes i18n() much easier in some cases.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+- Support automatically generating a printable header parameter from most plugin elements
 - New Object based convience method for printing headers from plugins
 - Implement polyPath()-drawing in RK() device
 - Pre-compile the common js code included in every plugin (only when compiled with Qt >= 4.7)
