Change the implementation of plugin menu building. - Keep a representation of the menu hierarchy. - Allow grouping plugins within a menu. Sort plugins within each group, alphabetically. - Drop the former "index" attribute controlling oder of menu entries.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+- More robust control over placement of plugins within a menu
+  - TODO: document, discuss
 - Fix several issues of excessive printing of digits in plugins' output
 - Restructure layout of CSV-import dialog
 - Allow to open (any number of) R script files and rkward://-urls from the command line
