Allow opening any file that matches text/plain. Use correct highlighting for .pluginmap, .rkh, and .inc (guessing XML highlighting for the latter).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+- Allow opening RKWard's plugin files (with correct highlighting), and other text files
 - More robust control over placement of plugins within a menu
   - TODO: document, discuss
 - Fix several issues of excessive printing of digits in plugins' output
