Fix freezes when using e.g. RK() from within Rcmdr. This was due to a request coming in without a running command (as seen by the frontend).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+- Fixed: Freezes when using RKWard-functionality (such as the RK()-device) from tcl/tk (e.g. Rcmdr)
 - Allow opening RKWard's plugin files (with correct highlighting), and other text files
 - More robust control over placement of plugins within a menu
   - TODO: document, discuss
