--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+- When the RKWard installation has moved on disk, try to adjust stored .pluginmaps paths, accordingly
+  - TODO: Actually test this on Windows
 - Fixed: Freezes when using RKWard-functionality (such as the RK()-device) from tcl/tk (e.g. Rcmdr)
 - Allow opening RKWard's plugin files (with correct highlighting), and other text files
 - More robust control over placement of plugins within a menu
